# ROS_GO2

./: .dockerignore  .gitattributes  .gitignore  BUGFIX_UNPACKING.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  SETUP_WSL.md  VERIFICATION.md  docker-compose.yml  install_dependencies.sh  install_training_deps.sh  pyproject.toml  quick_test.py  run_all_tests.sh  setup.py  test_config_load.py  test_industrial_events.py  test_nav2_and_heuristics.py
.github/workflows/: tests.yml
configs/: README.md  default.yaml  map_campus.yaml  map_corridor.yaml  map_l_shaped.yaml  map_large_square.yaml  map_office_building.yaml  map_warehouse.yaml
docs/: ENHANCEMENT_PLAN.md  MAP_CONFIGURATION.md  MULTI_MAP_TRAINING.md  PAPER_REFERENCE_KO.md  heuristic_method.md
readme/: DEPLOYMENT.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  PBT_DESIGN.md  PHASE1_PATCHES.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PROGRESS.md  PROJECT_COMPLETE.md  PR_SUMMARY.md  R&D_Plan_Complete_v4.md  README.md  SESSION_1_SUMMARY.md  TODO_IMPROVEMENTS.md  Unitree_GO2_PRO_Developer_Guide.md  debug_guide.md  development_guide.md
readme/completed_fixes/: README.md  (+5 more)
scripts/: analyze_logs.py  apply_phase1.sh  benchmark.py  demo.py  evaluate.py  evaluate_generalization.py  patch_patrol_env.py  quick_phase2_validation.py  quick_test_fix.py  render_saved_heatmaps.py  run_curriculum.sh  run_test_phase3.sh  train.py  train_curriculum.py  train_fixed.sh  train_multi_map.py  train_multi_map_fixed.py  train_pbt.py  train_with_logging.py  validate_phase2.sh  visualize_coverage.py  visualize_map.py
simulation/: SIMULATION_PLAN.md  __init__.py  requirements.txt
tests/: test_all_fixes.py  test_candidate_generation.py  test_core_types.py  test_env.py  test_multimap.py  test_patrol_env_fix.py  test_pbt_implementation.py  test_phase1_feasible_goals.py  test_phase2_reward_redesign.py  test_phase3_curriculum.py  test_phase4_state_enhancements.py  test_quick_training.py
(+39 files in other folders)
